welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:15: error: Unmatched closing brace '}' ignored here
}}} 
  ^BDRBuggle:17: error: eof expected but '}' found.
	}
        ^